cambiato colore toggle e piccole modifiche

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <li><a class="text-uppercase" href="#">Contact</a></li>
                 </ul>
             </div><!-- /.navbar-collapse -->
-        </div><!-- /.container-fluid -->
+        </div><!-- /.container -->
     </nav>
 
     <header class="jumbotron text-center">
@@ -56,7 +56,7 @@
             <div class="star text-center">
                 <i class="fas fa-star"></i>
             </div>
-            <span class="skills">Web Developer - Graphic Artist - Illustrator</span>
+            <span class="skills">Graphic Artist - Web Designer - Illustrator</span>
 
 
 
