--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         </div><!-- /.container -->
     </nav>
 
+    <!-- header -->
     <header class="jumbotron text-center">
         <div class="container">
             <div class="row">
@@ -57,11 +58,6 @@
                 <i class="fas fa-star"></i>
             </div>
             <span class="skills">Graphic Artist - Web Designer - Illustrator</span>
-
-
-
-            
-
         </div>
     </header>
 
