--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </header>
 
     <!-- portfolio section -->
-    <section id="portfolio">
+    <section id="portfolio" class="padding-section">
         <div class="container">
             <h2 class="text-center text-uppercase h1">portfolio</h2>
             <!-- stellina malefica -->
@@ -95,7 +95,7 @@
     </section>
 
     <!-- about section -->
-    <section id="about" class="bg-colored">
+    <section id="about" class="bg-colored padding-section">
         <div class="container">
             <h2 class="text-center text-uppercase h1">about</h2>
             <!-- stellina malefica -->
@@ -103,10 +103,18 @@
                 <i class="fas fa-star"></i>
             </div>
             <div class="row">
-                <div class="col-lg-4">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p>
-                    <p>You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p>
+                <div class="lead col-sm-offset-2 col-sm-4">
+                    <p class="leade">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p>
                 </div>
+                <div class="lead col-sm-4">  
+                    <p class="leade">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p>
+                </div>
+            </div>
+            <div class="text-center">
+                <a href="#" class="btn  btn-lg text-center">
+                    <i class="fas fa-download"></i>
+                    <span> &nbsp; Free Download!</span>
+                </a>
             </div>
         </div>
         
