--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </div>
             <div class="row">
                 <div class="lead col-xs-offset-1 col-xs-10 col-sm-offset-2 col-sm-4">
-                    <p class="leade">Freelancer is a free bootstrap theme created by Start Bootstrap. The download
+                    <p class="lead">Freelancer is a free bootstrap theme created by Start Bootstrap. The download
                         includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS
                         stylesheets for easy customization.</p>
                 </div>
@@ -133,24 +133,73 @@
             <div class="form-wrapper">
                 <div class="form-group">
                     <input type="text" placeholder="User Name" class="form-control">
-                 </div>
-                 <div class="form-group">
-                    <input type="email" placeholder="Email Address"  class="form-control">
-                 </div>
-                 <div class="form-group">
-                    <input type="tel" placeholder="Phone Number"  class="form-control">
-                 </div>
-                 <div class="form-group">
+                </div>
+                <div class="form-group">
+                    <input type="email" placeholder="Email Address" class="form-control">
+                </div>
+                <div class="form-group">
+                    <input type="tel" placeholder="Phone Number" class="form-control">
+                </div>
+                <div class="form-group">
                     <label for="message"></label>
                     <textarea placeholder="Message" id="message" rows="50" class="form-control"></textarea>
-                 </div>
+                </div>
 
-                 
-                 <div class="form-group">
+
+                <div class="form-group">
                     <button type="submit" class="btn btn-success btn-lg">Send</button>
-                 </div>
+                </div>
             </div>
-            
+
+        </div>
+    </section>
+
+    <!-- footer -->
+    <footer class="padding-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <h4 class="text-uppercase text-center bold-text">
+                        Location
+                    </h4>
+                    <p class="lead text-center">
+                        2215 John Daniel Drive
+                        <br>
+                        Clark, MO 65243
+                    </p>
+                </div>
+                <div class="col-md-4">
+                    <h4 class="text-uppercase text-center bold-text">
+                        Around the web
+                    </h4>
+                    <div class="text-center">
+                        <div class="row">
+                            <a class="btn btn-circle"><i class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-circle"><i class="fab fa-twitter"></i></a>
+                            <a class="btn btn-circle"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-circle"><i class="fab fa-dribbble"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <h4 class="text-uppercase text-center bold-text">
+                        About freelancer
+                    </h4>
+                    <p class="lead text-center">
+                        Freelance is a free to use, MIT licensed Bootstrap theme created by <a href="#">Start
+                            Bootstrap</a>.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <!-- copyright section -->
+    <section id="copyright">
+        <div class="container">
+            <p class="text-center">
+                Copyright © Your Website 2019
+            </p>
         </div>
     </section>
 
