aggiunta trasparenza alle immagini

--- a/index.html
+++ b/index.html
@@ -70,23 +70,35 @@
             <!-- ----------------- -->
             <div class="row">
                 <div class="img-padding col-sm-6 col-lg-4">
-                    <img class="img-rounded img-responsive" src="img/casa.png" alt="">
+                    <div class="overlay">
+                        <img class="img-rounded img-responsive" src="img/casa.png" alt="">
+                    </div>  
                 </div>
                 <div class="img-padding col-sm-6 col-lg-4">
-                    <img class="img-rounded img-responsive" src="img/cake.png" alt="">
+                    <div class="overlay">
+                        <img class="img-rounded img-responsive" src="img/cake.png" alt="">
+                    </div>
                 </div>
                 <div class="img-padding col-sm-6 col-lg-4">
-                    <img class="img-rounded img-responsive" src="img/circus.png" alt="">
+                    <div class="overlay">
+                        <img class="img-rounded img-responsive" src="img/circus.png" alt="">
+                    </div>    
                 </div>
                 <!-- qui non devo fare un' altra row altrimenti andrebbe a capo -->
                 <div class="img-padding col-sm-6 col-lg-4">
-                    <img class="img-rounded img-responsive" src="img/game.png" alt="">
+                    <div class="overlay">
+                        <img class="img-rounded img-responsive" src="img/game.png" alt="">
+                    </div>    
                 </div>
                 <div class="img-padding col-sm-6 col-lg-4">
-                    <img class="img-rounded img-responsive" src="img/safe.png" alt="">
+                    <div class="overlay">
+                        <img class="img-rounded img-responsive" src="img/safe.png" alt="">
+                    </div>    
                 </div>
                 <div class="img-padding col-sm-6 col-lg-4">
-                    <img class="img-rounded img-responsive" src="img/submarine.png" alt="">
+                    <div class="overlay">
+                        <img class="img-rounded img-responsive" src="img/submarine.png" alt="">                        
+                    </div>    
                 </div>
             </div>
         </div>
