aggiunti i + agli hover delle img e raggruppato qualche proprieta in classi specifiche

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 
     <!-- Navigation -->
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-default navbar-fixed-top bg-dark">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -60,7 +60,7 @@
     </header>
 
     <!-- portfolio section -->
-    <section id="portfolio" class="padding-section">
+    <section id="portfolio" class="padding-section text-dark">
         <div class="container">
             <h2 class="text-center text-uppercase h1 bold-text">portfolio</h2>
             <!-- stellina malefica -->
@@ -72,32 +72,38 @@
                 <div class="img-padding col-sm-6 col-lg-4">
                     <div class="overlay">
                         <img class="img-rounded img-responsive" src="img/casa.png" alt="">
+                        <i class="fas fa-plus fa-3x text-center"></i>
                     </div>  
                 </div>
                 <div class="img-padding col-sm-6 col-lg-4">
                     <div class="overlay">
                         <img class="img-rounded img-responsive" src="img/cake.png" alt="">
+                        <i class="fas fa-plus fa-3x text-center"></i>
                     </div>
                 </div>
                 <div class="img-padding col-sm-6 col-lg-4">
                     <div class="overlay">
                         <img class="img-rounded img-responsive" src="img/circus.png" alt="">
+                        <i class="fas fa-plus fa-3x text-center"></i>
                     </div>    
                 </div>
                 <!-- qui non devo fare un' altra row altrimenti andrebbe a capo -->
                 <div class="img-padding col-sm-6 col-lg-4">
                     <div class="overlay">
                         <img class="img-rounded img-responsive" src="img/game.png" alt="">
+                        <i class="fas fa-plus fa-3x text-center"></i>
                     </div>    
                 </div>
                 <div class="img-padding col-sm-6 col-lg-4">
                     <div class="overlay">
                         <img class="img-rounded img-responsive" src="img/safe.png" alt="">
+                        <i class="fas fa-plus fa-3x text-center"></i>
                     </div>    
                 </div>
                 <div class="img-padding col-sm-6 col-lg-4">
                     <div class="overlay">
-                        <img class="img-rounded img-responsive" src="img/submarine.png" alt="">                        
+                        <img class="img-rounded img-responsive" src="img/submarine.png" alt="">
+                        <i class="fas fa-plus fa-3x text-center"></i>                        
                     </div>    
                 </div>
             </div>
@@ -135,7 +141,7 @@
     </section>
 
     <!-- contact section -->
-    <section id="contact" class="padding-section">
+    <section id="contact" class="padding-section text-dark">
         <div class="container">
             <h2 class="text-center text-uppercase h1 bold-text">Contact Me</h2>
             <!-- stellina malefica -->
@@ -154,7 +160,7 @@
                 </div>
                 <div class="form-group">
                     <label for="message"></label>
-                    <textarea placeholder="Message" id="message" rows="50" class="form-control"></textarea>
+                    <textarea placeholder="Message" id="message" class="form-control"></textarea>
                 </div>
 
 
@@ -167,7 +173,7 @@
     </section>
 
     <!-- footer -->
-    <footer class="padding-section">
+    <footer class="padding-section bg-dark">
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
@@ -198,8 +204,8 @@
                         About freelancer
                     </h4>
                     <p class="lead text-center">
-                        Freelance is a free to use, MIT licensed Bootstrap theme created by <a href="#">Start
-                            Bootstrap</a>.
+                        Freelance is a free to use, MIT licensed Bootstrap theme created by 
+                        <a href="#">Start Bootstrap</a>.
                     </p>
                 </div>
             </div>
