--- a/index.html
+++ b/index.html
@@ -150,17 +150,18 @@
             </div>
             <div class="form-wrapper">
                 <div class="form-group">
-                    <input type="text" placeholder="User Name" class="form-control">
+                    <input type="text" autocomplete="off" placeholder="User Name" class="form-control">
                 </div>
                 <div class="form-group">
-                    <input type="email" placeholder="Email Address" class="form-control">
+                    <input type="email" autocomplete="off" placeholder="Email Address" class="form-control">
                 </div>
                 <div class="form-group">
-                    <input type="tel" placeholder="Phone Number" class="form-control">
+                    <input type="tel" autocomplete="off" placeholder="Phone Number" class="form-control">
                 </div>
                 <div class="form-group">
+                    <!-- ? aumentare le righe -->
                     <label for="message"></label>
-                    <textarea placeholder="Message" id="message" class="form-control"></textarea>
+                    <textarea autocomplete="off" placeholder="Message" id="message" class="form-control"></textarea>
                 </div>
 
 
